# opentelemetry-instrumentation-kstreams

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.md  pyproject.toml
.github/workflows/: publish-release-candidate.yaml  release-python.yaml  test.yaml
scripts/: bump  format  install  lint  release  test
src/opentelemetry_instrumentation_kstreams/: __init__.py  instrumentor.py  middlewares.py  package.py  utils.py  wrappers.py
tests/: test_instrumentation.py  test_utils.py
